--- a/setup/roles/todo/templates/database.yaml.j2
+++ b/setup/roles/todo/templates/database.yaml.j2
@@ -16,3 +16,8 @@ spec:
     todo: todo
   postgresql:
     version: "14"
+  patroni:
+    pg_hba:
+      - local   all             all                                   trust
+      - host    all             all                0.0.0.0/0         md5
+      - hostssl all             all                all               md5
