chapter 20 todo app - fix with postgress operator - add new version + fix in database todo manifest

--- a/setup/roles/todo/templates/database.yaml.j2
+++ b/setup/roles/todo/templates/database.yaml.j2
@@ -21,3 +21,4 @@ spec:
       - local   all             all                                   trust
       - host    all             all                0.0.0.0/0         md5
       - hostssl all             all                all               md5
+      - host    replication     standby            0.0.0.0/0         md5
